--- a/package.json
+++ b/package.json
@@ -6,6 +6,27 @@
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
-    "fortawesome:fontawesome": "~4.5.0"
+    "accounts-password": "1.1.8",
+    "aldeed:collection2": "2.9.1",
+    "aldeed:simple-schema": "~1.5.3",
+    "babrahams:editable-text": "0.8.15",
+    "babrahams:editable-text-froala": "0.1.15",
+    "blaze-html-templates": "1.0.4",
+    "dburles:google-maps": "1.1.5",
+    "ecmascript": "0.4.3",
+    "es5-shim": "4.5.10",
+    "fortawesome:fontawesome": "4.5.0",
+    "iron:router": "1.0.12",
+    "jquery": "1.11.8",
+    "meteor-base": "1.0.4",
+    "mobile-experience": "1.0.4",
+    "mongo": "1.1.7",
+    "reactive-var": "1.0.9",
+    "session": "1.1.5",
+    "standard-minifier-css": "1.0.6",
+    "standard-minifier-js": "1.0.6",
+    "templates:array": "1.0.3",
+    "tracker": "1.0.13"
+
   }
 }
